<resources>
    <string name="app_name">JournalApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="x">X</string>
    <string name="welcome_to_journal_app_n_login_to_your_account">Welcome to Journal App \n Login to your Account</string>
    <string name="username">Username :</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_to_journal_app_n_create_new_account">Welcome to Journal App \n Create New Account</string>
    <string name="email">Email :</string>
    <string name="passwordO">Password</string>
    <string name="usernameO">Username</string>
    <string name="emailO">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_posts">No Posts</string>
</resources>